fix: change color

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="author" content="AhmadMCer">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Happy Birtday Daem</title>
+  <title>Thank You Tedi</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,18 +20,18 @@
   <div id="box" class="box">
     <div class="tape-horizontal"></div>
     <div class="tape-vertical"></div>
-    <div class="ribbon" onclick="ribbonClick()"><img src="assets/image/ribbon_pink.svg"></img></div>
+    <div class="ribbon" onclick="ribbonClick()"><img src="assets/image/ribbon.svg"></img></div>
   </div>
 
   <div class="background-container">
     <div class="background">
-      <img src="assets/image/shine_background_pink.png">
+      <img src="assets/image/background_shine.png">
     </div>
     <div id="stars" class="stars"></div>
   </div>
 
   <div class="content">
-    <img src="assets/image/daem_ganteng.jpg" onclick="moveStars()">
+    <img src="assets/image/tedi_ganteng.jpg" onclick="moveStars()">
     <h2>Thank You!</h2>
     <h1>Kak Tedi Setiawan</h1>
   </div>
