fix: fixing text

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <div id="gift-card" class="gift-card">
     <p>
       Hello Tedi, thank you very much.<br><br>
-      A big thank you to our mentor, Tedi Setiawan, for his incredible guidance and support throughout the MSIB Cloud Computing Learning Path journey. His presence and guidance opened the door to new insights in the world of Cloud Computing, guided us through challenges, and inspired us to keep growing. Thank you for your tremendous dedication, being a key pillar of our success in understanding and applying important concepts in information technology.<br><br>
+      Thank you to our mentor, Tedi Setiawan, for his incredible guidance and support throughout the MSIB Cloud Computing Learning Path journey. His presence and guidance opened the door to new insights into the world of Cloud Computing, guided us through challenges, and inspired us to keep growing. Thank you for your tremendous dedication, a key pillar of our success in understanding and applying important concepts in information technology.<br><br>
       Best Regards,<br>
       CC-36.
       <button onclick="closeGiftCard()"><i class="fas fa-times fa-3x fa-fw"></i></button>
